@@ -8,9 +8,12 @@
 - Server will not collect data from unmanaged nodes
 - Added PostgreSQL support under Windows
 - NetWare platform subagent improved
+- Linux subagent: Implemented all Net.Interface.* parameters except
+  Net.Interface.Speed
 - Fixed crash in Microsoft SQL driver caused by unsuccessful connection
 - Windows console:
 	- Action properties dialog improved
+	- Sorting implemented in data collection editor
 
 
 *
